statum-macros/tests/ui/invalid_presentation_unknown_key.stderr
error: Error: unknown `#[present(...)]` key `title`.
       Supported keys: `label`, `description`, `metadata`.
  --> tests/ui/invalid_presentation_unknown_key.rs:25:15
   |
25 |     #[present(title = "Submit")]
   |               ^^^^^
